# docs/swagger.yaml
@@ -197,6 +197,44 @@ paths:
       summary: Register a new user
       tags:
       - Auth
+  /user/suguser:
+    get:
+      description: Get suggested users by following
+      parameters:
+      - description: User ID
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.UserModel'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get suggested users
+      tags:
+      - Users
   /user/updateuser/{id}:
     patch:
       consumes:
